fixing mobile screen overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,12 @@
 html {
     font-size: 10px;
     font-family: 'Monserrat-semiBold';
-
+    overflow-x: hidden;
 }
 
 body {
     overflow-x: hidden;
+    overflow: hidden;
 }
 
 @font-face {
